[package]
name = "nuclear_data"
version = "0.1.0"
edition = "2021"

[dependencies]
daggy = "0.8.0"
dashmap = "6.1.0"
futures = "0.3.31"
lazy_static = "1.5.0"
libc = "0.2.169"
memmap2 = "0.9.5"
path-clean = "1.0.1"
polars = {version = "0.45.1", featues = ["lazy"]}
rayon = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["full"] }
